--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ available to the controller, freeing the latter from overload and duplication.</
 <span class="p">}</span>
 
 <span class="c1">//DELETE</span>
-<span class="nx">exports</span><span class="p">.</span><span class="k">delete</span> <span class="o">=</span> <span class="kd">function</span><span class="p">(</span><span class="nx">id</span><span class="p">)</span> <span class="p">{</span>
+<span class="nx">exports</span><span class="p">.</span><span class="nx">del</span> <span class="o">=</span> <span class="kd">function</span><span class="p">(</span><span class="nx">id</span><span class="p">)</span> <span class="p">{</span>
   <span class="c1">//Delete</span>
 <span class="p">}</span>
 </pre></div>
@@ -179,6 +179,10 @@ available to the controller, freeing the latter from overload and duplication.</
   <span class="k">this</span><span class="p">.</span><span class="nx">render</span><span class="p">();</span>
 <span class="p">}</span>
 </pre></div>
+
+<p>To nest a view inside a layout, do:</p>
+
+<p>this.nest('viewName').within('master').as('child').render();</p>
 
 <h2>Models</h2>
 
