Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@ available to the controller, freeing the latter from overload and duplication.</
 <li><p><code>this.POST</code> (request body)</p></li>
 </ul><h3>Resourceful routing</h3>
 
-<p>You can easily map requests to CRUD operations, by setting the REST property in the controller.</p>
+<p>An alternative routing system is resourceful routing, which allows you to easily map requests to CRUD operations.</p>
+
+<p>To activate resourceful routing, set the REST property in the controller to <code>true</code>.</p>
 
 <p>Let's suppose we have a controller called <code>article</code>, which looks like this:</p>
 
